# loki-ai-assistant

./: .gitignore  LICENSE  Modelfile  README.md  build_cloner.py  pyproject.toml  requirements.txt
loki/: __init__.py  api_client.py  audio_handler.py  command_parser.py  config.py  llm_client.py  llm_providers.py  loki_core.py  prompts.py  stt_handler.py  tts_handler.py  utils.py  visual_controller.py  visual_server.py
loki.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_command_parser.py
